RESOLVED FIXED72751
WebKit2.MouseMoveAfterCrash API test is failing
https://bugs.webkit.org/show_bug.cgi?id=72751
Summary WebKit2.MouseMoveAfterCrash API test is failing
Simon Fraser (smfr)
Reported 2011-11-18 13:13:11 PST
WebKit2.MouseMoveAfterCrash is failing on the bots. This appears to have broken at r100483, which was the fix for https://bugs.webkit.org/show_bug.cgi?id=72400
Attachments
Patch (3.76 KB, patch)
2011-11-29 18:03 PST, Beth Dakin
sam: review+
Simon Fraser (smfr)
Comment 1 2011-11-18 13:18:02 PST
I confirmed that rolling out r100483 fixes this.
Beth Dakin
Comment 2 2011-11-29 14:10:48 PST
I see what the problem is. The problem is in these changes: Index: Source/WebKit2/WebProcess/WebPage/WebPage.cpp =================================================================== --- Source/WebKit2/WebProcess/WebPage/WebPage.cpp (revision 100305) +++ Source/WebKit2/WebProcess/WebPage/WebPage.cpp (working copy) @@ -1105,7 +1105,7 @@ static bool handleContextMenuEvent(const return handled; } -static bool handleMouseEvent(const WebMouseEvent& mouseEvent, Page* page) +static bool handleMouseEvent(const WebMouseEvent& mouseEvent, Page* page, bool onlyUpdateScrollbars) { Frame* frame = page->mainFrame(); if (!frame->view()) @@ -1128,7 +1128,7 @@ static bool handleMouseEvent(const WebMo case WebCore::MouseEventReleased: return frame->eventHandler()->handleMouseReleaseEvent(platformMouseEvent); case WebCore::MouseEventMoved: - return frame->eventHandler()->mouseMoved(platformMouseEvent); + return frame->eventHandler()->mouseMoved(platformMouseEvent, onlyUpdateScrollbars); default: ASSERT_NOT_REACHED(); @@ -1154,7 +1154,7 @@ void WebPage::mouseEvent(const WebMouseE if (!handled) { CurrentEvent currentEvent(mouseEvent); - handled = handleMouseEvent(mouseEvent, m_page.get()); + handled = handleMouseEvent(mouseEvent, m_page.get(), !windowIsFocused()); } send(Messages::WebPageProxy::DidReceiveEvent(static_cast<uint32_t>(mouseEvent.type()), handled)); @@ -1172,7 +1172,7 @@ void WebPage::mouseEventSyncForTesting(c if (!handled) { CurrentEvent currentEvent(mouseEvent); - handled = handleMouseEvent(mouseEvent, m_page.get()); + handled = handleMouseEvent(mouseEvent, m_page.get(), !windowIsFocused()); } } In the test harness, windowIsFocused() is false because on Mac it evaluates to m_windowIsVisible, and the window is not visible. It's a simple problem, but I'll have to think about the best way to solve it.
Beth Dakin
Comment 3 2011-11-29 18:03:50 PST
Beth Dakin
Comment 4 2011-11-30 11:01:00 PST
Thanks Sam! Committed change with revision 101532.
Note You need to log in before you can comment on or make changes to this bug.