https://bugs.webkit.org/show_bug.cgi?id=72751 WebKit2.MouseMoveAfterCrash API test is failing

Reviewed by Sam Weinig.

Source/WebKit2:

windowIsFocused() is too restrictive. All we need to know is that the page is
active.
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::mouseEvent):
(WebKit::WebPage::mouseEventSyncForTesting):

Tools:

Like DumpRenderTree, the NSWindow should act as an active window.
* TestWebKitAPI/mac/PlatformWebViewMac.mm:
(-[ActiveOffscreenWindow isKeyWindow]):
(TestWebKitAPI::PlatformWebView::PlatformWebView):



Canonical link: https://commits.webkit.org/90013@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101532 268f45cc-cd09-0410-ab3c-d52691b4dbfc